fix: second page add: spacing

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -68,6 +68,7 @@ h4 {
     font-weight: 400;
     font-size: 20px;
     line-height: 115%;
+    letter-spacing: 0.06em;
 }
 
 h5 {
@@ -76,6 +77,7 @@ h5 {
     font-weight: 400;
     font-size: 15px;
     line-height: 110%;
+    letter-spacing: 0.06em;
 }
 
 p {
@@ -85,16 +87,18 @@ p {
     font-size: 15px;
     line-height: 160%;
     color: $--main-color-dark-s;
-    letter-spacing: 0.0001em;
+    letter-spacing: 0.06em;
 }
 
 .wrapper {
-    // display: grid;
-    background-color: $--main-color-dark-s;
-    // grid-template-columns: 1fr;
-    // row-gap: 0px;
+    // background-color: $--main-color-dark-s;
+    box-sizing: content-box;
     margin: 0 auto 0 auto;
     max-width: 1280px;
+}
+
+.container {
+    padding: 0 40px;
 }
 
 
@@ -112,7 +116,6 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 40px 0 40px;
     nav {
         font-family: 'Arial';
         font-style: normal;
@@ -129,7 +132,7 @@ p {
             font-weight: 400;
             font-size: 15px;
             line-height: 160%;
-            color: $--main-color-dark-s;
+            color: $--main-color-light-s;
             text-decoration: none;
             &:hover {
                 text-decoration: underline;
@@ -148,6 +151,30 @@ p {
     }
 }
 
+.header_our_pets {
+    padding: 30px 0;
+    background-color: $--main-color-light-xl;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .title {
+        p {
+            color: $--main-color-dark-3xl;
+        }
+        h1 {
+            color: $--main-color-dark-l;
+            letter-spacing: 0.06em;
+        }
+    }
+    nav a {
+        color: $--main-color-dark-l;
+        &:hover {
+            text-decoration: underline;
+            color: $--main-color-dark-3xl;
+        }
+    }
+}
+
 .title {
     text-align: center;
     text-decoration: none;
@@ -160,12 +187,13 @@ p {
         line-height: 110%;
         color: $--main-color-primary;
         margin-bottom: 10px;
+        letter-spacing: 0.06em;
     }
     p {
         font-family: 'Arial';
         font-style: normal;
         font-weight: 400;
-        font-size: 13px;
+        font-size: 14px;
         line-height: 15px;
         color: $--main-color-light-xl;
     }
@@ -178,12 +206,9 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 80px 40px 0 40px;
+    margin: 60px 0 0 0;
     h2 {
         color: $--main-color-light-xl;
-    }
-    p {
-        color: $--main-color-dark-s;
     }
 }
 
@@ -194,6 +219,11 @@ p {
     gap: 40px;
     width: 460px;
     margin-top: 163px;
+    p {
+        color: $--main-color-dark-s;
+        line-height: 160%;
+        letter-spacing: 0.001em;
+    }
 }
 
 .start_screen__button {
@@ -205,7 +235,8 @@ p {
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
-    line-height: 130%;
+    line-height: 150%;
+    letter-spacing: 0.06em;
     color: $--main-color-dark-3xl;
     text-decoration: none;
     &:hover {
@@ -220,12 +251,19 @@ p {
 .about {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 120px;
     background-color: $--main-color-light-xl;
-    padding: 80px 40px 100px 40px;
+    padding: 80px 0 100px 0;
     p {
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 15px;
         color: $--main-color-dark-xl;
         margin-top: 25px;
+        letter-spacing: 0.0001em;
+        // line-height: 160%;
     }
     h3 {
         color: $--main-color-dark-l;
@@ -245,7 +283,8 @@ p {
     justify-content: space-between;
     align-items: center;
     gap: 60px;
-    padding: 80px 40px 100px 40px;
+    padding-top: 80px;
+    padding-bottom: 100px;
     background-color: $--main-color-light-l;
     h3 {
         text-align: center;
@@ -266,7 +305,7 @@ p {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 53px;
+    align-self: stretch;
     .pets_scroller__button {
         height: 52px;
         width: 52px;
@@ -285,8 +324,18 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 53px; //!!!!!!!!!!!!
+    gap: 90px;
+}
+
+.cards_box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: 30px;
 }
 
 .card {
@@ -348,7 +397,8 @@ p {
     flex-direction: column;
     align-items: center;
     gap: 60px;
-    padding: 80px 40px 100px 40px;
+    padding-top: 80px;
+    padding-bottom: 100px;
     background-color: $--main-color-light-xl;
     h3 {
         text-align: center;
@@ -361,17 +411,20 @@ p {
 }
 
 .help__list {
-    width: 1026px;
+    max-width: 1026px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 55px 120px;
+    gap: 50px 119px;
 }
 
 .help__list_card {
     width: auto;
     height: 113px;
     text-align: center;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.06em;
     /*border: 2px solid $--main-color-primary;*/
 }
 
@@ -382,8 +435,10 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 30px;
-    padding: 80px 40px 100px 40px;
+    padding-top: 80px;
+    padding-bottom: 100px;
     background-color: $--main-color-light-l;
     p {
         font-family: 'Arial';
@@ -391,6 +446,7 @@ p {
         font-weight: 400;
         font-size: 12px;
         line-height: 18px;
+        letter-spacing: 0.001em;
         color: $--main-color-dark-m;
     }
     h3 {
@@ -433,8 +489,11 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    padding: 40px 40px 0 40px;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 160px;
+    padding-top: 40px;
+    padding-bottom: 0px;
     background-image: url("../../assets/start-screen-background.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -450,8 +509,10 @@ p {
 .footer__content {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    justify-content: space-between;
+    gap: 40px;
     height: 234px;
+    margin-top: 16px;
     /*border: 2px solid $--main-color-primary;*/
     a {
         display: flex;
@@ -466,26 +527,7 @@ p {
 
 /*****************************************************/
 
-.header_our_pets {
-    padding: 0;
-    background-color: $--main-color-light-xl;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    .title {
-        p {
-            color: $--main-color-dark-3xl;
-        }
-        h1 {
-            color: $--main-color-dark-l;
-        }
-    }
-    nav a {
-        color: $--main-color-dark-3xl;
-    }
-}
-
-.pets__our_pets {
+.pets {
     .navigation_button button {
         height: 52px;
         width: 52px;
@@ -494,10 +536,10 @@ p {
         text-align: center;
         margin: 0 10px 0 10px;
     }
-    .navigation_button__current_page {
-        border: 2px solid $--main-color-primary-light;
-        background-color: $--main-color-primary-light;
-    }
+    // .navigation_button__current_page {
+    //     border: 2px solid $--main-color-primary-light;
+    //     background-color: $--main-color-primary-light;
+    // }
     .navigation_button_active {
         border: 2px solid $--main-color-primary-light;
         background-color: $--main-color-light-l;
